update the add of IAEs for the circle IAEs
